k8s-manifests/migrate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.sample.yaml --controller deployment --out k8s-manifests
    kompose.version: 1.22.0 (HEAD)
  labels:
    io.kompose.service: migrate
  name: migrate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: migrate
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.sample.yaml --controller deployment --out k8s-manifests
        kompose.version: 1.22.0 (HEAD)
      labels:
        io.kompose.service: migrate
    spec:
      containers:
        - args:
            - ./manage.py
            - migrate
          image: glitchtip/glitchtip
          name: migrate
          resources: 
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              memory: 200Mi
              cpu: 100m
      restartPolicy: Always
status: {}
