k8s-manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.sample.yaml --controller deployment --out k8s-manifests
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.sample.yaml --controller deployment --out k8s-manifests
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - glitchtip
            - worker
            - -B
            - -l
            - INFO
          image: glitchtip/glitchtip
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
